--- a/BirdSong/AndroidManifest.xml
+++ b/BirdSong/AndroidManifest.xml
@@ -30,6 +30,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="sound.birdsong.MainActivity" />
         </activity>
+        <activity
+            android:name="sound.birdsong.ListenActivity"
+            android:label="@string/title_activity_listen"
+            android:parentActivityName="sound.birdsong.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="sound.birdsong.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
