--- a/BirdSong/bin/AndroidManifest.xml
+++ b/BirdSong/bin/AndroidManifest.xml
@@ -30,6 +30,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="sound.birdsong.MainActivity" />
         </activity>
+        <activity
+            android:name="sound.birdsong.AnalysisActivity"
+            android:label="@string/title_activity_analysis"
+            android:parentActivityName="sound.birdsong.ListenActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="sound.birdsong.ListenActivity" />
+        </activity>
     </application>
 
 </manifest>
