--- a/BirdSong/AndroidManifest.xml
+++ b/BirdSong/AndroidManifest.xml
@@ -6,7 +6,8 @@
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="18" />
+        android:targetSdkVersion="19" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/> 
 
     <application
         android:allowBackup="true"
