--- a/BirdSong/bin/AndroidManifest.xml
+++ b/BirdSong/bin/AndroidManifest.xml
@@ -2,11 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="sound.birdsong"
     android:versionCode="1"
-    android:versionName="1.2" >
+    android:versionName="1.3" >
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="18" />
+        android:targetSdkVersion="19" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/> 
 
     <application
         android:allowBackup="true"
